2008-01-07  Behdad Esfahbod  <behdad@gnome.org>

	* modulesets/gnome-2.18.modules: Use gnome-2-20 branch for
	gnome-terminal.

2008-01-07  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/gnome-suites-2.22.modules: adjusted devhelp deps:
	removed libgnomeui and gnome-vfs and added gtk+, libglade, gconf
	and libwnck.

2008-01-07  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/gnome-2.22.modules: added babl and gegl; note that gegl
	could need some external deps in order to be useful (see comment
	in the module definition) and requests ruby in order to perform
	autogen phase.

2008-01-07  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/gnome-2.22.modules: gvfs now depends only on glib
	not gio-standalone.

2008-01-06  Frederic Peters  <fpeters@0d.be>

	* jhbuild/frontends/terminal.py: fixed xterm title setting when using
	quiet mode with progress bar.

2008-01-06  Frederic Peters  <fpeters@0d.be>

	* jhbuild/versioncontrol/svn.py: only check for "Conflict" at the
	beginning of strings, as "Conflict" could occur in filenames; spotted
	by John Carr  (closes: #507722).

2008-01-06  Frederic Peters  <fpeters@0d.be>

	* jhbuild/config.py, jhbuild/defaults.jhbuildrc,
	jhbuild/frontends/terminal.py: added a progress bar in quiet mode, as
	in mockup in bug #503925; on by default, with possibility to disable
	with progress_bar configuration variable.

2008-01-06  Frederic Peters  <fpeters@0d.be>

	* jhbuild/defaults.jhbuildrc, jhbuild/config.py,
	jhbuild/commands/base.py, jhbuild/frontends/terminal.py: added a quiet
	mode, activated by the quiet_mode variable in configuration variable or
	the -q/--quiet flag to build and buildone commands.  (closes: #503925)

2008-01-06  Frederic Peters  <fpeters@0d.be>

	* jhbuild/modtypes/tarball.py: made Tarball module type a thin wrapper
	around Autotools module type and Tarball repository type; thus removing
	a lot of duplicated code.

2008-01-04  Emmanuele Bassi  <ebassi@gnome.org>
