@@ -1,3 +1,8 @@
+2008-01-08  Frederic Peters  <fpeters@0d.be>
+
+	* jhbuild/frontends/terminal.py: catch exceptions around ncurses call
+	to setup terminal.
+
 2008-01-07  Behdad Esfahbod  <behdad@gnome.org>
 
 	* modulesets/gnome-2.18.modules: Use gnome-2-20 branch for
